--- a/assets/sass/design-system/layout.sass
+++ b/assets/sass/design-system/layout.sass
@@ -1,10 +1,12 @@
-@include media-breakpoint-up(md)
-    .blocks:not(.blocks-chapo)
-        > *
-            padding-bottom: $spacing4
-    .blocks > *
-        margin: unset
-    .blocks > .block-with-title, 
-    .blocks > :first-of-type
-        > *
-            padding-top: $spacing3
+// TODO : pourquoi pas conserver le style par défaut ici ?
+
+// @include media-breakpoint-up(md)
+//     .blocks:not(.blocks-chapo)
+//         > *
+//             padding-bottom: $spacing4
+//     .blocks > *
+//         margin: unset
+//     .blocks > .block-with-title, 
+//     .blocks > :first-of-type
+//         > *
+//             padding-top: $spacing3
