--- a/assets/sass/_configuration.sass
+++ b/assets/sass/_configuration.sass
@@ -34,7 +34,6 @@ $spacing5: px2rem(256)
 $article-title-size: px2rem(18)
 $article-title-size-md: $article-title-size
 
-
 $hero-background-color: $site-color
 $header-background: $site-color
 $header-sticky-background: white
@@ -54,8 +53,14 @@ $footer-background-color: $main-color
 $hero-height: 300px
 $hero-height-md: 650px
 
+// Toc
 $toc-color: #6c757d
 $toc-active-color: $institute-color
+$toc-font-size: px2rem(20)
+$toc-font-size-md: px2rem(20)
+$toc-font-family: $heading-font-family
+$toc-line-height: 130%
+$toc-font-weight: 600
 
 // CTA
 $block-call-to-action-background: $institute-color
