--- a/assets/sass/design-system/typography.sass
+++ b/assets/sass/design-system/typography.sass
@@ -101,7 +101,7 @@ p, li
 .lead
     &,
     p
-        font-size: $h3-size
+        font-size: px2rem(20) // TODO : ne s'applique pas
         line-height: $h3-line-height
         @include media-breakpoint-up(md)
             font-size: px2rem(50)
