--- a/assets/sass/sections/programs.sass
+++ b/assets/sass/sections/programs.sass
@@ -13,6 +13,8 @@
                     align-items: flex-end
                     justify-content: space-between
                     font-size: $h4-size-md
+                @include media-breakpoint-up(lg)
+                    font-size: $h3-size-md
                 @include media-breakpoint-up(md)
                     &::after
                         opacity: 0
