--- a/assets/sass/sections/diplomas.sass
+++ b/assets/sass/sections/diplomas.sass
@@ -2,7 +2,7 @@ body.diplomas__taxonomy,
 body.diplomas__term
     .hero
         background-color: $program-color
-        min-height: calc(548px + var(--header-height) - 20px)
+        min-height: calc(548px + var(--header-height) - 1.25rem)
         margin-bottom: px2rem(120)
         @include media-breakpoint-down(md)
             margin-bottom: $spacing2
