--- a/assets/sass/sections/programs.sass
+++ b/assets/sass/sections/programs.sass
@@ -44,7 +44,7 @@ body.programs__section,
         display: flex
         padding-bottom: 0
         @include media-breakpoint-up(md)
-            min-height: 548px
+            min-height: calc(548px + var(--header-height) - 1.25rem)
         h1 
             width: 75%
             @include media-breakpoint-down(md)
