--- a/assets/sass/sections/programs.sass
+++ b/assets/sass/sections/programs.sass
@@ -45,6 +45,9 @@ body.programs__section,
         padding-bottom: 0
         @include media-breakpoint-up(md)
             min-height: calc(548px + var(--header-height) - 1.25rem)
+        > div:first-of-type
+            > div
+                margin-top: $spacing1
         h1 
             width: 75%
             @include media-breakpoint-down(md)
