--- a/assets/sass/blocks/files.sass
+++ b/assets/sass/blocks/files.sass
@@ -2,7 +2,7 @@
     a
         &:hover
             &::before
-                background-color: rgba(0,0,0, 0.2)
+                background-color: transparentize($main-color, 0.8)
                 border-color: transparent
                 color: white
         span 
