--- a/assets/sass/sections/programs.sass
+++ b/assets/sass/sections/programs.sass
@@ -101,6 +101,20 @@ body.programs__section,
     //         &:focus
     //             box-shadow: 0 0 0 0.25rem rgba(white, .5)
 
+    aside
+        margin-bottom: $spacing4
+        .toc
+            ol
+                flex-direction: row
+                flex-wrap: nowrap
+                justify-content: space-between
+                a
+                    color: white
+                    text-transform: none
+                    font-family: $body-font-family
+                    font-weight: normal
+                    &:hover
+                        text-decoration-color: white
     main 
         .content 
             h2
