--- a/assets/sass/sections/diplomas.sass
+++ b/assets/sass/sections/diplomas.sass
@@ -1,13 +1,13 @@
 body.diplomas__taxonomy,
 body.diplomas__term
+    header[role="banner"]:not(.is-sticky)
+        html:not(.has-menu-opened) &
+            background-color: $program-color
     .hero
         background-color: $program-color
-        min-height: calc(548px + var(--header-height) - 1.25rem)
         margin-bottom: px2rem(120)
         @include media-breakpoint-down(md)
             margin-bottom: $spacing2
-            min-height: 300px
-            padding-top: calc(#{$spacing3} / 2)
 
 .diplomas__taxonomy
     @include media-breakpoint-down(md)
