--- a/assets/old_sass/_theme/partials/blocks/_key_figures.sass
+++ b/assets/old_sass/_theme/partials/blocks/_key_figures.sass
@@ -10,9 +10,9 @@
         li
             margin-bottom: 3rem
             @extend .col-6
-            @include in-page-with-aside
+            @include in-page-with-sidebar
                 @extend .col-md-4
-            @include in-page-without-aside
+            @include in-page-without-sidebar
                 @extend .col-md-3
     dl
         dt
