--- a/assets/old_sass/partials/blocks/_chapter.sass
+++ b/assets/old_sass/partials/blocks/_chapter.sass
@@ -5,7 +5,7 @@
         @extend .h5
 
     @include media-breakpoint-up(md)
-        @include in-page-without-aside
+        @include in-page-without-sidebar
             .block-content
                 > *
                     @include make-col(7)
