--- a/assets/old_sass/partials/blocks/_gallery.sass
+++ b/assets/old_sass/partials/blocks/_gallery.sass
@@ -1,7 +1,7 @@
 .block-gallery
     .top
         .description
-            @include in-page-without-aside
+            @include in-page-without-sidebar
                 @extend .col-md-7
     &--carousel
         background-color: black
