--- a/assets/old_sass/partials/blocks/_pages.sass
+++ b/assets/old_sass/partials/blocks/_pages.sass
@@ -72,7 +72,7 @@
                 //         top: 0
                 //         width: 1px
                 @include media-breakpoint-up(xl)
-                    @include in-page-without-aside
+                    @include in-page-without-sidebar
                         width: 33.33333%
                 &:last-child::after
                     content: none
