--- a/assets/old_sass/partials/body/_top.sass
+++ b/assets/old_sass/partials/body/_top.sass
@@ -4,6 +4,6 @@
         @extend .h4
         margin-bottom: 0
 
-    @include in-page-without-aside
+    @include in-page-without-sidebar
         h2
             @extend .surtitle
