--- a/assets/old_sass/partials/body/_typography.sass
+++ b/assets/old_sass/partials/body/_typography.sass
@@ -105,7 +105,7 @@ p, li
         margin-bottom: 0
     @include media-breakpoint-up(md)
         margin-bottom: px2rem(128)
-    @include in-page-with-aside
+    @include in-page-with-sidebar
         margin-bottom: calc(#{$spacer} * 2)
         &,
         p
