--- a/layouts/persons/list.html
+++ b/layouts/persons/list.html
@@ -19,11 +19,11 @@
 
   {{ if .Params.blocks }}
     <div class="content-blocks">
-      {{ partial "pages/aside.html"
+      {{/* partial "pages/aside.html"
           (dict
               "context" .
           )
-      }}
+      */}}
       <div class="blocks blocks-chapo">
         <div class="container">
           <div class="block-content">
