--- a/assets/old_sass/_theme/_utils.sass
+++ b/assets/old_sass/_theme/_utils.sass
@@ -23,12 +23,12 @@
     text-transform: none
     vertical-align: middle
 
-@mixin in-page-with-aside
+@mixin in-page-with-sidebar
     aside ~ .blocks &,
     .programs__section:not(.page-program) .blocks &
         @content
 
-@mixin in-page-without-aside
+@mixin in-page-without-sidebar
     main > .blocks &,
     body:not(.programs__section) main > article > .blocks &
         @content
