--- a/assets/sass/design-system/typography.sass
+++ b/assets/sass/design-system/typography.sass
@@ -109,7 +109,7 @@ p, li
         @include media-breakpoint-up(xl)
             font-size: $h1-size-md
             line-height: 130%
-        @include in-page-with-aside
+        @include in-page-with-sidebar
             @include media-breakpoint-up(md)
                 font-size: $h3-size-md
                 line-height: $h3-line-height
