--- a/assets/sass/_configuration.sass
+++ b/assets/sass/_configuration.sass
@@ -58,9 +58,8 @@ $toc-color: #6c757d
 $toc-active-color: $institute-color
 $toc-font-size: px2rem(20)
 $toc-font-size-md: px2rem(20)
-$toc-font-family: $heading-font-family
+// $toc-font-family: $heading-font-family
 $toc-line-height: 130%
-$toc-font-weight: 600
 
 // CTA
 $block-call-to-action-background: $institute-color
