--- a/assets/sass/design-system/hero.sass
+++ b/assets/sass/design-system/hero.sass
@@ -38,10 +38,8 @@ body.posts__page
             .container
                 align-items: center
                 display: flex 
-                time
-                    font-size: px2rem(18)
-                p 
-                    font-size: px2rem(18)
+                font-size: px2rem(18)
+                > * + * 
                     margin-left: $spacing1
             @include media-breakpoint-up(md)
                 &::before
