--- a/assets/sass/design-system/typography.sass
+++ b/assets/sass/design-system/typography.sass
@@ -128,9 +128,14 @@ main > .blocks .top h2,
     text-transform: uppercase
 
 [itemprop="articleBody"]
-    h2
-        @extend .h4
-    h3
-        @extend .h5
-    h4
-        @extend .h6
+    h1, h2, h3, h4, h5, h6, p
+        margin-block-start: 2em
+        margin-block-end: 0
+        &:first-child
+            margin-block-start: 0
+//     h2
+//         @extend .h4
+//     h3
+//         @extend .h5
+//     h4
+//         @extend .h6
