--- a/layouts/partials/posts/hero-single.html
+++ b/layouts/partials/posts/hero-single.html
@@ -12,11 +12,11 @@
       {{ $date := .Date | time.Format ":date_long" }}
       <time datetime="{{ .Date.Format "2006-01-02T15:04" }}">{{ $date }}</time>
       {{ range .GetTerms "authors" }}
-        <p itemscope itemtype="https://schema.org/Person" itemprop="author">
+        <div itemscope itemtype="https://schema.org/Person" itemprop="author">
           <a href="{{ .Permalink }}" itemprop="url">
             <span itemprop="name">{{ safeHTML .Params.person }}</span>
           </a>
-        </p>
+        </div>
       {{ end }}
     </div>
   </div>
