--- a/assets/sass/design-system/typography.sass
+++ b/assets/sass/design-system/typography.sass
@@ -80,6 +80,8 @@ p, li
     @include media-breakpoint-up(xl)
         font-size: $h3-size
         line-height: 150%
+p
+    margin-top: 0
 
 .surtitle
     font-family: $heading-font-family
@@ -131,8 +133,9 @@ main > .blocks .top h2,
     h1, h2, h3, h4, h5, h6, p
         margin-block-start: 2em
         margin-block-end: 0
-        &:first-child
+        &:first-child, meta + &
             margin-block-start: 0
+
 //     h2
 //         @extend .h4
 //     h3
