--- a/assets/sass/sections/posts.sass
+++ b/assets/sass/sections/posts.sass
@@ -31,7 +31,7 @@
         img
             aspect-ratio: auto
 
-.table-infos
+.post-infos
     th
         color: $toc-color
         padding-top: calc(#{$spacing2} / 3)
@@ -39,8 +39,9 @@
 
 body.posts__page 
     aside
-        .infos
-            p 
+        .post-infos
+            border-top: 0
+            p
                 font-weight: 600
                 letter-spacing: -.01em
                 line-height: 130%
