--- a/assets/sass/home/_pages.sass
+++ b/assets/sass/home/_pages.sass
@@ -83,3 +83,8 @@
     .block-timeline--horizontal,
     aside ~ .blocks .block-call_to_action .call_to_action > div
         background-color: $site-color
+    
+
+
+    main > .blocks .block-call_to_action .block-content
+        background-color: $site-color
