deactivate old config

--- a/assets/sass/_configuration.sass
+++ b/assets/sass/_configuration.sass
@@ -13,78 +13,78 @@ $main-color: black
 $body-font-family: 'Inter', system-ui, -apple-system, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", "Liberation Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji"
 $heading-font-family: 'Basier Circle', system-ui, -apple-system, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", "Liberation Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji"
 
-$h5-size: px2rem(16)
-$h2-size-md: px2rem(40)
-$h3-size-md: px2rem(40)
-$h4-size-md: px2rem(28)
-$h5-size-md: px2rem(24)
-$h6-size-md: px2rem(22)
+// $h5-size: px2rem(16)
+// $h2-size-md: px2rem(40)
+// $h3-size-md: px2rem(40)
+// $h4-size-md: px2rem(28)
+// $h5-size-md: px2rem(24)
+// $h6-size-md: px2rem(22)
 
-$h1-weight: bold
+// $h1-weight: bold
 
-// Spacing
-$spacing0: px2rem(16)
-$spacing1: px2rem(24)
-$spacing2: px2rem(48)
-$spacing3: px2rem(64)
-$spacing4: px2rem(128)
-$spacing5: px2rem(256)
+// // Spacing
+// $spacing0: px2rem(16)
+// $spacing1: px2rem(24)
+// $spacing2: px2rem(48)
+// $spacing3: px2rem(64)
+// $spacing4: px2rem(128)
+// $spacing5: px2rem(256)
 
-// Sections
-$article-title-size: px2rem(18)
-$article-title-size-md: $article-title-size
+// // Sections
+// $article-title-size: px2rem(18)
+// $article-title-size-md: $article-title-size
 
-$hero-background-color: $site-color
-$hero-color: white
-$header-background: $site-color
-$header-sticky-background: white
-$header-color: white
-$header-sticky-color: $main-color
-$header-dropdown-background: white
-$header-dropdown-color: $main-color
-$header-logo-height: 42px !important
-$header-dropdown-full: true
+// $hero-background-color: $site-color
+// $hero-color: white
+// $header-background: $site-color
+// $header-sticky-background: white
+// $header-color: white
+// $header-sticky-color: $main-color
+// $header-dropdown-background: white
+// $header-dropdown-color: $main-color
+// $header-logo-height: 42px !important
+// $header-dropdown-full: true
 
-$breadcrumb-color: rgba(white, .8)
+// $breadcrumb-color: rgba(white, .8)
 
-$footer-color: white
-$footer-background-color: $main-color
+// $footer-color: white
+// $footer-background-color: $main-color
 
-// Hero
-$hero-height: 300px
-$hero-height-md: 650px
+// // Hero
+// $hero-height: 300px
+// $hero-height-md: 650px
 
-// Toc
-// $toc-color: #6c757d
-// $toc-active-color: $institute-color
-// $toc-font-size: px2rem(20)
-// $toc-font-size-md: px2rem(20)
-// $toc-line-height: 130%
+// // Toc
+// // $toc-color: #6c757d
+// // $toc-active-color: $institute-color
+// // $toc-font-size: px2rem(20)
+// // $toc-font-size-md: px2rem(20)
+// // $toc-line-height: 130%
 
-// CTA
-$block-call-to-action-background: $institute-color
-$block-call-to-action-color: white
-$block-call-to-action-button-background : white
-$block-pages-card-page-background-hover: $site-color
+// // CTA
+// $block-call-to-action-background: $institute-color
+// $block-call-to-action-color: white
+// $block-call-to-action-button-background : white
+// $block-pages-card-page-background-hover: $site-color
 
-// Timeline
-$block-timeline-horizontal-background: $institute-color
+// // Timeline
+// $block-timeline-horizontal-background: $institute-color
 
-// Key figures
-$block-key_figures-number-font-size: px2rem(50)
+// // Key figures
+// $block-key_figures-number-font-size: px2rem(50)
 
-// Block pages
-$block-pages-card-background: #f8f9fa
+// // Block pages
+// $block-pages-card-background: #f8f9fa
 
-// Person
-$persons-avatar-background-color: #F5F5F5
+// // Person
+// $persons-avatar-background-color: #F5F5F5
 
-// Layout posts list
-$posts-layout-list: true
+// // Layout posts list
+// $posts-layout-list: true
 
-// Animations
-$arrow-ease-transition-2: cubic-bezier(0,.65,.4,1)
+// // Animations
+// $arrow-ease-transition-2: cubic-bezier(0,.65,.4,1)
 
-// programs
-$program-share-font-size: px2rem(18)
-$program-share-font-size-md: px2rem(18)
+// // programs
+// $program-share-font-size: px2rem(18)
+// $program-share-font-size-md: px2rem(18)
