--- a/assets/sass/_configuration.sass
+++ b/assets/sass/_configuration.sass
@@ -6,85 +6,138 @@ $site-color: #4C1540
 $institute-color: #32538D
 $post-color: #312783
 $program-color: #006633
+$color-border: rgba(0,0,0,.2)
 
+$color-accent: $site-color
 $main-color: black
 
 // Fonts
 $body-font-family: 'Inter', system-ui, -apple-system, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", "Liberation Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji"
 $heading-font-family: 'Basier Circle', system-ui, -apple-system, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", "Liberation Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji"
 
-// $h5-size: px2rem(16)
-// $h2-size-md: px2rem(40)
-// $h3-size-md: px2rem(40)
-// $h4-size-md: px2rem(28)
-// $h5-size-md: px2rem(24)
-// $h6-size-md: px2rem(22)
+// Headings
 
-// $h1-weight: bold
+// h2
+$h2-size-md: px2rem(60)
+$h2-line-height: 110%
 
-// // Spacing
-// $spacing0: px2rem(16)
-// $spacing1: px2rem(24)
-// $spacing2: px2rem(48)
-// $spacing3: px2rem(64)
-// $spacing4: px2rem(128)
-// $spacing5: px2rem(256)
+// h3
+$h3-size-md: px2rem(40)
+$h3-line-height: 110%
 
-// // Sections
-// $article-title-size: px2rem(18)
-// $article-title-size-md: $article-title-size
+// h4
+$h4-size-md: px2rem(28)
+$h4-size: px2rem(18)
 
-// $hero-background-color: $site-color
-// $hero-color: white
-// $header-background: $site-color
-// $header-sticky-background: white
-// $header-color: white
-// $header-sticky-color: $main-color
-// $header-dropdown-background: white
-// $header-dropdown-color: $main-color
-// $header-logo-height: 42px !important
-// $header-dropdown-full: true
+// h6 or Section
+$h6-size-md: px2rem(24)
+$h6-size: px2rem(20)
 
-// $breadcrumb-color: rgba(white, .8)
+// h7 or tab ?
 
-// $footer-color: white
-// $footer-background-color: $main-color
+// Lead
+// PAS PRÉSENT DANS LE DESIGN SYSTEM
 
-// // Hero
-// $hero-height: 300px
-// $hero-height-md: 650px
+// Body
+$body-size: px2rem(16)
 
-// // Toc
-// // $toc-color: #6c757d
-// // $toc-active-color: $institute-color
-// // $toc-font-size: px2rem(20)
-// // $toc-font-size-md: px2rem(20)
-// // $toc-line-height: 130%
+// PAS PRÉSENT DANS LE DESIGN SYSTEM
 
-// // CTA
-// $block-call-to-action-background: $institute-color
-// $block-call-to-action-color: white
-// $block-call-to-action-button-background : white
-// $block-pages-card-page-background-hover: $site-color
+// Meta
+$meta-font-family: px2rem(14)
+$meta-size-md: px2rem(18)
 
-// // Timeline
-// $block-timeline-horizontal-background: $institute-color
+// Quotes
+$quote-size-short: px2rem(60) // TODO : vérifier les tailles de typo dans le block quote
+$quote-size-long: px2rem(40)
+$quote-line-height: 150%
+// TODO : personne en couleur sur le figma : ajouter une variable ?
 
-// // Key figures
-// $block-key_figures-number-font-size: px2rem(50)
+// Buttons
+$btn-font-size: px2rem(18)
+$btn-padding-x-md: px2rem(45)
+$btn-padding-x: px2rem(45)
+$btn-border-radius: px2rem(4)
 
-// // Block pages
-// $block-pages-card-background: #f8f9fa
+// Spacing
+$spacing0: px2rem(16)
 
-// // Person
-// $persons-avatar-background-color: #F5F5F5
+// Breadcrumb
+$breadcrumb-below-h1: false
+$breadcrumb-color: rgba(white, .8)
 
-// // Layout posts list
-// $posts-layout-list: true
+// Header
+$header-background: $site-color
+$header-color: white
+$header-dropdown-color: $main-color
+$header-sticky-color: $main-color
+$header-dropdown-full: true
+$header-logo-height: 42px
+$header-height-md: 102px 
+// variable pour le padding mobile ?
+// variable pour le bouton mobile ? (actuellement color-body)
+    
+// Footer
+$footer-color: white
+$footer-background-color: $main-color
 
-// // Animations
-// $arrow-ease-transition-2: cubic-bezier(0,.65,.4,1)
+// Hero
+$hero-background-color: $site-color
+$hero-color: white
+$hero-height-md: 650px
 
-// // programs
-// $program-share-font-size: px2rem(18)
-// $program-share-font-size-md: px2rem(18)
+// System
+
+// Table of content // TODO : prévoir le TOC dans la maquette
+$toc-active-color: $institute-color
+$toc-font-family: $heading-font-family
+$toc-font-size-md: px2rem(20) // TODO : font size mobile
+$toc-line-height: 150%
+$toc-title-font-size-md: $meta-size-md
+
+// Table
+$table-head-font-size: px2rem(18)
+$table-head-font-size-md: px2rem(22)
+
+// BLOCKS
+
+// Block call to action
+$block-call-to-action-background: $site-color
+$block-call-to-action-color: white
+// variale pour font-size cta ?
+
+// Block definitions
+$block-definition-border-color-hovered: $main-color
+$block-definition-color-hovered: $main-color
+$block-definition-font-size-md: px2rem(20)
+// variable font family ? --> inter
+
+// Block pages
+$block-pages-card-background: #f8f9fa
+$block-pages-card-page-background-hover: $site-color
+
+// Block timeline
+$block-timeline-horizontal-background: $institute-color
+$block-timeline-horizontal-color: white
+
+
+// Block testimonials
+$block-testimonials-color: $institute-color
+$block-testimonials-pagination-progress-background: $institute-color
+
+// Block key_figures
+// variables pour font-weight ?
+
+// Block gallery
+$block-gallery-carousel-background: black
+
+// Sections
+
+// Person
+$persons-avatar-background-color: #F5F5F5
+
+// Programs
+// Variables : essential-color: hero-color & essential-color-alt: color-text-alt
+
+// Animations
+$arrow-ease-transition-2: cubic-bezier(0,.65,.4,1)
