--- a/assets/sass/_configuration.sass
+++ b/assets/sass/_configuration.sass
@@ -75,6 +75,7 @@ $header-sticky-color: $main-color
 $header-dropdown-full: true
 $header-logo-height: 42px
 $header-height-md: 102px 
+$header-sticky-invert-logo: true
 // variable pour le padding mobile ?
 // variable pour le bouton mobile ? (actuellement color-body)
     
