breadcrumb icon config

--- a/assets/sass/_configuration.sass
+++ b/assets/sass/_configuration.sass
@@ -66,6 +66,7 @@ $spacing0: px2rem(16)
 // Breadcrumb
 $breadcrumb-below-h1: false
 $breadcrumb-color: rgba(white, .8)
+$breadcrumb-icon-color: rgba(white, .5)
 
 // Header
 $header-background: $site-color
@@ -120,7 +121,6 @@ $block-pages-card-page-background-hover: $site-color
 // Block timeline
 $block-timeline-horizontal-background: $institute-color
 $block-timeline-horizontal-color: white
-
 
 // Block testimonials
 $block-testimonials-color: $institute-color
