--- a/assets/sass/_configuration.sass
+++ b/assets/sass/_configuration.sass
@@ -119,6 +119,9 @@ $block-definition-font-size-md: px2rem(20)
 $block-pages-card-background: #f8f9fa
 $block-pages-card-page-background-hover: $site-color
 
+// Block posts
+$block-posts-grid-columns: 2
+
 // Block timeline
 $block-timeline-horizontal-background: $institute-color
 $block-timeline-horizontal-color: white
