--- a/assets/sass/_style.sass
+++ b/assets/sass/_style.sass
@@ -1,3 +1,8 @@
+header[role="banner"]
+    border-bottom-color: hsla(0,0%,100%,.2)
+    .dropdown-menu
+        border-top: 1px solid rgba(0,0,0,.2)
+
 ol.programs,
 ul.categories 
     > li 
