--- a/assets/sass/_configuration.sass
+++ b/assets/sass/_configuration.sass
@@ -40,7 +40,7 @@ $h6-size: px2rem(20)
 // PAS PRÉSENT DANS LE DESIGN SYSTEM
 
 // Body
-$body-size: px2rem(16)
+$body-size-md: px2rem(20)
 
 // PAS PRÉSENT DANS LE DESIGN SYSTEM
 
