--- a/assets/sass/_configuration.sass
+++ b/assets/sass/_configuration.sass
@@ -18,20 +18,20 @@ $heading-font-family: 'Basier Circle', system-ui, -apple-system, "Segoe UI", Rob
 // Headings
 
 // h2
-$h2-size-md: px2rem(60)
+$h2-size-desktop: px2rem(60)
 $h2-line-height: 110%
 
 // h3
-$h3-size-md: px2rem(40)
+$h3-size-desktop: px2rem(40)
 $h3-line-height: 110%
 $h3-weight: 500
 
 // h4
-$h4-size-md: px2rem(28)
+$h4-size-desktop: px2rem(28)
 $h4-size: px2rem(18)
 
 // h6 or Section
-$h6-size-md: px2rem(24)
+$h6-size-desktop: px2rem(24)
 $h6-size: px2rem(20)
 
 // h7 or tab ?
@@ -40,13 +40,13 @@ $h6-size: px2rem(20)
 // PAS PRÉSENT DANS LE DESIGN SYSTEM
 
 // Body
-$body-size-md: px2rem(20)
+$body-size-desktop: px2rem(20)
 
 // PAS PRÉSENT DANS LE DESIGN SYSTEM
 
 // Meta
 $meta-font-family: px2rem(14)
-$meta-size-md: px2rem(18)
+$meta-size-desktop: px2rem(18)
 
 // Quotes
 $quote-size-short: px2rem(60) // TODO : vérifier les tailles de typo dans le block quote
@@ -56,7 +56,7 @@ $quote-line-height: 150%
 
 // Buttons
 $btn-font-size: px2rem(18)
-$btn-padding-x-md: px2rem(45)
+$btn-padding-x-desktop: px2rem(45)
 $btn-padding-x: px2rem(45)
 $btn-border-radius: px2rem(4)
 
@@ -75,7 +75,7 @@ $header-dropdown-color: $main-color
 $header-sticky-color: $main-color
 $header-dropdown-full: true
 $header-logo-height: 42px
-$header-height-md: 102px 
+$header-height-desktop: 102px 
 $header-sticky-invert-logo: true
 // variable pour le padding mobile ?
 // variable pour le bouton mobile ? (actuellement color-body)
@@ -87,20 +87,20 @@ $footer-background-color: $main-color
 // Hero
 $hero-background-color: $site-color
 $hero-color: white
-$hero-height-md: 650px
+$hero-height-desktop: 650px
 
 // System
 
 // Table of content // TODO : prévoir le TOC dans la maquette
 $toc-active-color: $institute-color
 $toc-font-family: $heading-font-family
-$toc-font-size-md: px2rem(20) // TODO : font size mobile
+$toc-font-size-desktop: px2rem(20) // TODO : font size mobile
 $toc-line-height: 150%
-$toc-title-font-size-md: $meta-size-md
+$toc-title-font-size-desktop: $meta-size-desktop
 
 // Table
 $table-head-font-size: px2rem(18)
-$table-head-font-size-md: px2rem(22)
+$table-head-font-size-desktop: px2rem(22)
 
 // BLOCKS
 
@@ -112,7 +112,7 @@ $block-call-to-action-color: white
 // Block definitions
 $block-definition-border-color-hovered: $main-color
 $block-definition-color-hovered: $main-color
-$block-definition-font-size-md: px2rem(20)
+$block-definition-font-size-desktop: px2rem(20)
 // variable font family ? --> inter
 
 // Block pages
