added lead to config

--- a/assets/sass/_configuration.sass
+++ b/assets/sass/_configuration.sass
@@ -38,6 +38,9 @@ $h6-size: px2rem(20)
 
 // Lead
 // PAS PRÉSENT DANS LE DESIGN SYSTEM
+$lead-size-desktop: px2rem(40)
+$lead-size: px2rem(20)
+$lead-line-height: 110%
 
 // Body
 $body-size-desktop: px2rem(20)
