--- a/assets/sass/_style.sass
+++ b/assets/sass/_style.sass
@@ -10,13 +10,10 @@ header[role="banner"]
         a, span
             font-family: $body-font-family
     .nav-level-2
-        > li
-            > a,
-            > span
-                font-size: px2rem(18)
+        a, span 
+            font-size: px2rem(18)
     .nav-level-3 
-        a,
-        span 
+        a, span 
             font-size: px2rem(14)
 
 // Breadcrumb
@@ -25,7 +22,6 @@ header[role="banner"]
     li
         a
             text-decoration-color: rgba($breadcrumb-color, 0.2)
-            text-underline-offset: 3px
 
 ol.programs,
 ul.categories 
