diplomas hovered links color

--- a/assets/sass/_configuration.sass
+++ b/assets/sass/_configuration.sass
@@ -57,6 +57,8 @@ $quote-size-long: px2rem(40)
 $quote-line-height: 150%
 // TODO : personne en couleur sur le figma : ajouter une variable ?
 
+// Variable pour le text-decoration-offset du mixin link ?
+
 // Buttons
 $btn-font-size: px2rem(18)
 $btn-padding-x-desktop: px2rem(45)
