--- a/assets/sass/_configuration.sass
+++ b/assets/sass/_configuration.sass
@@ -44,6 +44,7 @@ $lead-line-height: 110%
 
 // Body
 $body-size-desktop: px2rem(20)
+$body-size: px2rem(16)
 
 // PAS PRÉSENT DANS LE DESIGN SYSTEM
 
@@ -98,9 +99,9 @@ $hero-height-desktop: 650px
 
 // Table of content // TODO : prévoir le TOC dans la maquette
 $toc-active-color: $institute-color
-$toc-font-family: $heading-font-family
-$toc-font-size-desktop: px2rem(20) // TODO : font size mobile
-$toc-line-height: 150%
+$toc-font-family: $body-font-family
+$toc-font-size-desktop: px2rem(20)
+$toc-line-height: 140%
 $toc-title-font-size-desktop: $meta-size-desktop
 
 // Table
