--- a/assets/sass/_style.sass
+++ b/assets/sass/_style.sass
@@ -3,18 +3,32 @@
 header[role="banner"]
     border-bottom-color: hsla(0,0%,100%,.2)
     .dropdown-menu
-        border-top: 1px solid rgba(0,0,0,.2)
         @include media-breakpoint-up(md)
+            border-top: 1px solid rgba(0,0,0,.2)
             padding-bottom: $spacing3
             padding-top: $spacing3
         a, span
             font-family: $body-font-family
+    .nav-level-1
+        > li 
+            > a, span
+                @include media-breakpoint-down(md)
+                    font-size: px2rem(18)
     .nav-level-2
+        @include media-breakpoint-down(md)
+            .has-children  + .has-children
+                margin-top: 0
+            ul
+                padding-top: 0
         a, span 
-            font-size: px2rem(18)
+            font-size: px2rem(16)
+            @include media-breakpoint-down(md)
+                padding: calc(#{$spacing0} / 2) 0
     .nav-level-3 
         a, span 
             font-size: px2rem(14)
+            @include media-breakpoint-down(md)
+                line-height: 140%
 
 // Breadcrumb
 
