--- a/assets/sass/_style.sass
+++ b/assets/sass/_style.sass
@@ -83,3 +83,11 @@ ul.diplomas
     .grid, .cards
         h1
             @include h4
+
+.block-call_to_action
+    @include in-page-without-sidebar
+        h2
+            @include h2
+    @include in-page-with-sidebar
+        h2
+            @include h2
