--- a/assets/sass/_style.sass
+++ b/assets/sass/_style.sass
@@ -85,9 +85,13 @@ ul.diplomas
             @include h4
 
 .block-call_to_action
-    @include in-page-without-sidebar
-        h2
-            @include h2
-    @include in-page-with-sidebar
-        h2
-            @include h2
+    .call_to_action
+        @include in-page-without-sidebar
+            h2
+                @include h2
+        @include in-page-with-sidebar
+            h2
+                @include h2
+        .description
+            p
+                @include inherit-text
