style for titles in block chapter

--- a/assets/sass/_configuration.sass
+++ b/assets/sass/_configuration.sass
@@ -29,6 +29,10 @@ $h3-weight: 500
 // h4
 $h4-size-desktop: px2rem(28)
 $h4-size: px2rem(18)
+$h4-weight: 500
+
+// h5
+$h5-text-transform: none
 
 // h6 or Section
 $h6-size-desktop: px2rem(24)
