--- a/assets/sass/_style.sass
+++ b/assets/sass/_style.sass
@@ -83,3 +83,12 @@ ul.diplomas
     .grid, .cards
         h1
             @include h4
+
+.block-chapter
+    @include in-page-with-or-without-sidebar
+        h2, h3
+            @include h5
+.block
+    .top
+        h2, h3
+            @include h4
