--- a/assets/sass/_configuration.sass
+++ b/assets/sass/_configuration.sass
@@ -79,7 +79,7 @@ $breadcrumb-color: rgba(white, .8)
 $breadcrumb-icon-color: rgba(white, .5)
 
 // Header
-$header-background: $site-color
+$header-background: transparent
 $header-color: white
 $header-dropdown-color: $main-color
 $header-sticky-color: $main-color
