added hero color to person pages

--- a/assets/sass/_style.sass
+++ b/assets/sass/_style.sass
@@ -45,7 +45,9 @@ header[role="banner"]
         background-color: $program-color
 
 .pages__section,
-.pages__page
+.pages__page,
+.persons__section,
+.persons__page
     .hero
         background-color: $institute-color
 
