changed config variable for links

--- a/assets/sass/_configuration.sass
+++ b/assets/sass/_configuration.sass
@@ -11,6 +11,8 @@ $color-border: rgba(0,0,0,.2)
 $color-accent: $site-color
 $main-color: black
 
+$link-underline-offset: 3px
+
 // Fonts
 $body-font-family: 'Inter', system-ui, -apple-system, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", "Liberation Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji"
 $heading-font-family: 'Basier Circle', system-ui, -apple-system, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", "Liberation Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji"
