--- a/assets/sass/_style.sass
+++ b/assets/sass/_style.sass
@@ -167,7 +167,7 @@ ul.diplomas
             @include h6
     @include in-page-with-sidebar
         h2
-            @include h3
+            @include h4
 
 .block-pages
     .cards
@@ -205,4 +205,12 @@ ul.diplomas
         .description
             p
                 @include inherit-text
+.block-organization_chart
+    article
+        .name
+            a
+                @include meta
+                @include link
+                
+                
 
