hovered links in breadcrumb

--- a/assets/sass/_style.sass
+++ b/assets/sass/_style.sass
@@ -57,7 +57,8 @@ header[role="banner"]
     li
         a
             text-decoration-color: rgba($breadcrumb-color, 0.2)
-
+            &:hover
+                color: white
 ol.programs,
 ul.categories 
     > li 
