changed lead style in sections

--- a/assets/sass/_style.sass
+++ b/assets/sass/_style.sass
@@ -155,7 +155,8 @@ ul.diplomas
                 margin-bottom: px2rem(30)
 
 // Typography
-.pages__section:not(.full-width)
+.pages__section:not(.full-width),
+.posts__page:not(.full-width)
     .lead
         @include h3
 @include media-breakpoint-up(xl)
