--- a/assets/sass/_style.sass
+++ b/assets/sass/_style.sass
@@ -51,6 +51,7 @@ header[role="banner"]
     .hero
         background-color: $institute-color
 
+
 // Breadcrumb
 
 .breadcrumb 
@@ -153,6 +154,11 @@ ul.diplomas
         p
             @include media-breakpoint-down(xl)
                 margin-bottom: px2rem(30)
+
+// Posts
+.posts__page
+    .lead
+        @include h3
 
 // Typography
 @include media-breakpoint-up(xl)
