added border in footer

--- a/assets/sass/_configuration.sass
+++ b/assets/sass/_configuration.sass
@@ -53,6 +53,7 @@ $body-size-desktop: px2rem(20)
 $body-size: px2rem(16)
 
 // PAS PRÉSENT DANS LE DESIGN SYSTEM
+$small-size-desktop: px2rem(14)
 
 // Meta
 $meta-font-family: px2rem(14)
