hovered links in block pages

--- a/assets/sass/_style.sass
+++ b/assets/sass/_style.sass
@@ -51,7 +51,6 @@ header[role="banner"]
     .hero
         background-color: $institute-color
 
-
 // Breadcrumb
 
 .breadcrumb 
@@ -210,6 +209,11 @@ footer[role="contentinfo"]
             h2
                 @include h6
     &--list
+        @include in-page-with-or-without-sidebar
+            .top
+                a
+                    @include link
+                    text-decoration-color: rgba(0,0,0,0)
         .block-content
             @include in-page-with-or-without-sidebar
                 grid-row-gap: $spacing3
