block testimonials config

--- a/assets/sass/_configuration.sass
+++ b/assets/sass/_configuration.sass
@@ -143,6 +143,12 @@ $block-timeline-horizontal-color: white
 $block-testimonials-color: $institute-color
 $block-testimonials-pagination-progress-background: $institute-color
 
+$block-testimonials-xl-font-size: px2rem(50)
+$block-testimonials-xl-line-height: 110%
+$block-testimonials-xl-font-size-long-text: px2rem(36)
+$block-testimonials-xl-line-height-long-text: $block-testimonials-xl-line-height
+$block-testimonials-style: normal
+
 // Block key_figures
 // variables pour font-weight ?
 
