fixed essential style

--- a/assets/sass/_configuration.sass
+++ b/assets/sass/_configuration.sass
@@ -39,7 +39,7 @@ $h5-text-transform: none
 // h6 or Section
 $h6-size-desktop: px2rem(24)
 $h6-size: px2rem(20)
-
+$h6-weight: bold
 // h7 or tab ?
 
 // Lead
@@ -150,7 +150,8 @@ $block-testimonials-xl-line-height-long-text: $block-testimonials-xl-line-height
 $block-testimonials-style: normal
 
 // Block key_figures
-// variables pour font-weight ?
+$block-key_figures-number-font-family: $body-font-family
+$block-key_figures-number-font-weight: normal
 
 // Block gallery
 $block-gallery-carousel-background: black
