--- a/assets/sass/_utils.sass
+++ b/assets/sass/_utils.sass
@@ -4,3 +4,7 @@
     .block-testimonials
         blockquote p
             color: $color
+    .block-call_to_action
+        --cta-background-color: #{$color}
+    .block-timeline--horizontal
+        background: $color
